ui design begin assignment api

--- a/EduTune/Assignment/Questions/View/Assignments.storyboard
+++ b/EduTune/Assignment/Questions/View/Assignments.storyboard
@@ -99,7 +99,7 @@
                                     <constraint firstAttribute="height" constant="70" id="c9N-xV-KEy"/>
                                 </constraints>
                             </view>
-                            <collectionView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GK8-k4-TQC">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GK8-k4-TQC">
                                 <rect key="frame" x="0.0" y="158" width="414" height="610"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xWO-rt-7SC">
